log/build_2024-03-21_18-04-24/canbus_interface/stderr.log
  File "/root/ros2-ws-2024/install/canbus_interface/lib/python3.10/site-packages/canbus_interface/can_pub.py", line 26
    main()  if __name__=='__main__':
                                   ^
SyntaxError: invalid syntax

